name: fay-hello
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: BSD3
license-file: ""
description:
data-dir: ""

executable fay-hello
    build-depends: base -any, blaze-html -any, filepath -any,
                   hamlet -any, shakespeare-js -any,
                   text -any, blaze-markup -any, ghcjs -any,
                   fay-hello-js -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src

