name: ghcjs-hello
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: BSD3

flag jmacro
    description: Include some JMacro support
    default: True

executable ghcjs-hello
    build-depends: lens -any,
                   containers -any, random -any,
                   template-haskell -any, base -any, blaze-html -any, filepath -any,
                   hamlet -any, text -any, blaze-markup -any, shakespeare -any,
                   ghcjs-dom >=0.0.7 && <0.1, mtl -any, sodium -any, webkit-sodium -any,
                   jsaddle >=0.1.0.0 && <0.2

    if flag(jmacro)
        build-depends: jmacro >=0.6.3 && <0.8

    main-is: Main.hs
    buildable: True
    hs-source-dirs: src

