name: ghcjs-hello
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: BSD3

flag jmacro
    Description:  Include some JMacro support
    Default: False

executable ghcjs-hello
    build-depends: deepseq >=1.3.0.2 && <1.4, lens -any,
                   containers -any, random -any,
                   template-haskell -any, base -any, blaze-html -any, filepath -any,
                   hamlet -any, text -any, blaze-markup -any, shakespeare -any,
                   ghcjs-dom >=0.1.1.0 && <0.2, mtl -any, sodium -any, webkit-sodium -any,
                   jsaddle >=0.2.0.0 && <0.3

    if flag(jmacro)
        build-depends: jmacro >=0.6.3 && <0.8

    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -threaded -with-rtsopts=-N3

