name: ghcjs-hello
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: BSD3

flag jmacro
    Description:  Include some JMacro support
    Default: False

executable ghcjs-hello
    build-depends: base -any
                 , blaze-html -any
                 , blaze-markup -any
                 , containers -any
                 , deepseq >=1.3.0.2 && <1.5
                 , filepath -any
                 , ghcjs-dom >=0.1.1.0 && <0.3
                 , hamlet -any
                 , jsaddle >=0.3.0.0 && <0.4
                 , lens -any
                 , mtl -any
                 , random -any
                 , shakespeare -any
                 , sodium -any
                 , template-haskell -any
                 , text -any
                 , webkit-sodium -any

    if flag(jmacro)
        build-depends: jmacro >=0.6.3 && <0.8

    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -threaded -with-rtsopts=-N3

