name: mloc-js
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: ""
data-dir: "data"

library
    build-depends: array -any
                 , base -any
                 , blaze-html -any
                 , blaze-markup -any
                 , containers
                 , filepath -any
                 , ghcjs-dom -any
                 , gloss -any
                 , hamlet -any
                 , hscolour
                 , jmacro -any
                 , jsaddle
                 , lens
                 , mtl -any
                 , random
                 , shakespeare
                 , sodium -any
                 , template-haskell -any
                 , text -any
                 , webkit-sodium -any
    exposed-modules: Demo.DOM Demo.JavaScriptFFI Demo.LazyLoading
                     Demo.Threading
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: Demo.Life WebKitUtils

executable mloc-js
    build-depends: array -any
                 , base -any
                 , blaze-html -any
                 , blaze-markup -any
                 , containers
                 , filepath -any
                 , ghcjs-dom -any
                 , gloss -any
                 , hamlet -any
                 , hscolour
                 , jmacro -any
                 , jsaddle
                 , lens
                 , mtl -any
                 , random
                 , shakespeare
                 , sodium -any
                 , template-haskell -any
                 , text -any
                 , webkit-sodium -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Demo.Life WebKitUtils

