name: multiple-pages
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: BSD3
license-file: ""
synopsis: Dynamic web site build on multiple HTML pages
description: Shows how to add GHCJS support to static HTML files or server generated HTML files.
             .
             All the files run Main.main, but it simply detects the page and loads and runs the pages "main" function.
data-files: *.html
data-dir: data
 
executable multiple-pages
    build-depends: text >=0.11.2.3 && <0.12, hamlet >=1.1.0.2 && <1.2,
                   blaze-html >=0.5.0.0 && <0.7, webkit >=0.12.5 && <0.13,
                   mtl >=2.1.1 && <2.2, ghcjs-dom >=0.0.1 && <0.1, base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
