name: webkit-hello
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: BSD3
license-file: ""
description:
data-dir: ""

executable webkit-hello
    build-depends: base -any,
                   glib -any,
                   gtk -any,
                   webkit >= 0.12.5,
                   ghcjs-dom -any,
                   mtl -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -threaded -rtsopts
