name: webkit-sodium
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:
data-dir: ""

library
    build-depends: QuickCheck -any, base -any, glib -any, gtk -any, webkit -any, mtl -any,
                   sodium -any, array -any, filepath -any, random -any, ghcjs-dom -any,
                   webkit-javascriptcore -any, jsc -any, lens -any
    exposed-modules: Engine, Freecell, Game
    hs-source-dirs: src

executable freecell
    build-depends: QuickCheck -any, base -any, glib -any, gtk -any, webkit -any, mtl -any,
                   sodium -any, array -any, filepath -any, random -any, ghcjs-dom -any,
                   webkit-javascriptcore -any, jsc -any, lens -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -threaded -rtsopts
