name: webkit-sodium
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
description:

library
    build-depends: QuickCheck -any, base -any, mtl -any,
                   sodium -any, array -any, filepath -any, random -any, ghcjs-dom -any,
                   jsc -any, lens -any

    exposed-modules: Engine, Freecell, Game
    hs-source-dirs: src

 executable freecell
    build-depends: QuickCheck -any, base -any, mtl -any,
                   sodium -any, array -any, filepath -any, random -any, ghcjs-dom -any,
                   jsc -any, lens -any

    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -threaded -rtsopts
