name:                ghcjs-hello-js
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.8

executable ghcjs-hello-js
  build-depends:       base >= 4 && < 5, hamlet ==1.0.*, blaze-html ==0.5.*, text ==0.11.*, ghc-prim ==0.2.*
  Main-Is: Main.hs

